fix: icon color for dark mode

--- a/styles/cv.module.scss
+++ b/styles/cv.module.scss
@@ -20,7 +20,7 @@
 }
 
 .cv ul {
-  padding-left: 1rem;
+  margin-left: 1rem;
 }
 
 .cv li {
